Add MAVEN_OPTS to effectively use of docker container limits